noinst_LTLIBRARIES = libvftr_sorting.la
libvftr_sorting_la_LIBADD =
libvftr_sorting_la_SOURCES = sort_utils.c \
			     sorting_symboltable.c
libvftr_sorting_la_CFLAGS = -I${srcdir}/../

noinst_LTLIBRARIES += libvftr_sorting_int8.la
libvftr_sorting_la_LIBADD += libvftr_sorting_int8.la
libvftr_sorting_int8_la_SOURCES = sorting_int.c
libvftr_sorting_int8_la_CFLAGS = -DTYPE="int8_t" -DTYPESTR="int8"

noinst_LTLIBRARIES += libvftr_sorting_uint8.la
libvftr_sorting_la_LIBADD += libvftr_sorting_uint8.la
libvftr_sorting_uint8_la_SOURCES = sorting_uint.c
libvftr_sorting_uint8_la_CFLAGS = -DTYPE="uint8_t" -DTYPESTR="uint8"

noinst_LTLIBRARIES += libvftr_sorting_int16.la
libvftr_sorting_la_LIBADD += libvftr_sorting_int16.la
libvftr_sorting_int16_la_SOURCES = sorting_int.c
libvftr_sorting_int16_la_CFLAGS = -DTYPE="int16_t" -DTYPESTR="int16"

noinst_LTLIBRARIES += libvftr_sorting_uint16.la
libvftr_sorting_la_LIBADD += libvftr_sorting_uint16.la
libvftr_sorting_uint16_la_SOURCES = sorting_uint.c
libvftr_sorting_uint16_la_CFLAGS = -DTYPE="uint16_t" -DTYPESTR="uint16"

noinst_LTLIBRARIES += libvftr_sorting_int32.la
libvftr_sorting_la_LIBADD += libvftr_sorting_int32.la
libvftr_sorting_int32_la_SOURCES = sorting_int.c
libvftr_sorting_int32_la_CFLAGS = -DTYPE="int32_t" -DTYPESTR="int32"

noinst_LTLIBRARIES += libvftr_sorting_uint32.la
libvftr_sorting_la_LIBADD += libvftr_sorting_uint32.la
libvftr_sorting_uint32_la_SOURCES = sorting_uint.c
libvftr_sorting_uint32_la_CFLAGS = -DTYPE="uint32_t" -DTYPESTR="uint32"

noinst_LTLIBRARIES += libvftr_sorting_int64.la
libvftr_sorting_la_LIBADD += libvftr_sorting_int64.la
libvftr_sorting_int64_la_SOURCES = sorting_int.c
libvftr_sorting_int64_la_CFLAGS = -DTYPE="int64_t" -DTYPESTR="int64"

noinst_LTLIBRARIES += libvftr_sorting_uint64.la
libvftr_sorting_la_LIBADD += libvftr_sorting_uint64.la
libvftr_sorting_uint64_la_SOURCES = sorting_uint.c
libvftr_sorting_uint64_la_CFLAGS = -DTYPE="uint64_t" -DTYPESTR="uint64"

noinst_LTLIBRARIES += libvftr_sorting_char.la
libvftr_sorting_la_LIBADD += libvftr_sorting_char.la
libvftr_sorting_char_la_SOURCES = sorting_int.c
libvftr_sorting_char_la_CFLAGS = -DTYPE="char" -DTYPESTR="char"

noinst_LTLIBRARIES += libvftr_sorting_unsigned_char.la
libvftr_sorting_la_LIBADD += libvftr_sorting_unsigned_char.la
libvftr_sorting_unsigned_char_la_SOURCES = sorting_uint.c
libvftr_sorting_unsigned_char_la_CFLAGS = -DTYPE="unsigned char" -DTYPESTR="unsignedchar"

noinst_LTLIBRARIES += libvftr_sorting_short.la
libvftr_sorting_la_LIBADD += libvftr_sorting_short.la
libvftr_sorting_short_la_SOURCES = sorting_int.c
libvftr_sorting_short_la_CFLAGS = -DTYPE="short" -DTYPESTR="short"

noinst_LTLIBRARIES += libvftr_sorting_unsigned_short.la
libvftr_sorting_la_LIBADD += libvftr_sorting_unsigned_short.la
libvftr_sorting_unsigned_short_la_SOURCES = sorting_uint.c
libvftr_sorting_unsigned_short_la_CFLAGS = -DTYPE="unsigned short" -DTYPESTR="unsignedshort"

noinst_LTLIBRARIES += libvftr_sorting_int.la
libvftr_sorting_la_LIBADD += libvftr_sorting_int.la
libvftr_sorting_int_la_SOURCES = sorting_int.c
libvftr_sorting_int_la_CFLAGS = -DTYPE="int" -DTYPESTR="int"

noinst_LTLIBRARIES += libvftr_sorting_unsigned_int.la
libvftr_sorting_la_LIBADD += libvftr_sorting_unsigned_int.la
libvftr_sorting_unsigned_int_la_SOURCES = sorting_uint.c
libvftr_sorting_unsigned_int_la_CFLAGS = -DTYPE="unsigned int" -DTYPESTR="unsignedint"

noinst_LTLIBRARIES += libvftr_sorting_long.la
libvftr_sorting_la_LIBADD += libvftr_sorting_long.la
libvftr_sorting_long_la_SOURCES = sorting_int.c
libvftr_sorting_long_la_CFLAGS = -DTYPE="long" -DTYPESTR="long"

noinst_LTLIBRARIES += libvftr_sorting_unsigned_long.la
libvftr_sorting_la_LIBADD += libvftr_sorting_unsigned_long.la
libvftr_sorting_unsigned_long_la_SOURCES = sorting_uint.c
libvftr_sorting_unsigned_long_la_CFLAGS = -DTYPE="unsigned long" -DTYPESTR="unsignedlong"

noinst_LTLIBRARIES += libvftr_sorting_long_long.la
libvftr_sorting_la_LIBADD += libvftr_sorting_long_long.la
libvftr_sorting_long_long_la_SOURCES = sorting_int.c
libvftr_sorting_long_long_la_CFLAGS = -DTYPE="long long" -DTYPESTR="longlong"

noinst_LTLIBRARIES += libvftr_sorting_unsigned_long_long.la
libvftr_sorting_la_LIBADD += libvftr_sorting_unsigned_long_long.la
libvftr_sorting_unsigned_long_long_la_SOURCES = sorting_uint.c
libvftr_sorting_unsigned_long_long_la_CFLAGS = -DTYPE="unsigned long long" -DTYPESTR="unsignedlonglong"

noinst_LTLIBRARIES += libvftr_sorting_float.la
libvftr_sorting_la_LIBADD += libvftr_sorting_float.la
libvftr_sorting_float_la_SOURCES = sorting_float.c
libvftr_sorting_float_la_CFLAGS = -DTYPE="float" -DTYPESTR="float" -I${srcdir}/../

noinst_LTLIBRARIES += libvftr_sorting_double.la
libvftr_sorting_la_LIBADD += libvftr_sorting_double.la
libvftr_sorting_double_la_SOURCES = sorting_float.c
libvftr_sorting_double_la_CFLAGS = -DTYPE="double" -DTYPESTR="double" -I${srcdir}/../
